--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tienganh.tuvungtienganh">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.tienganh.vocabulary.app.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:name="com.tienganh.vocabulary.app.Application"
         android:resizeableActivity="false"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.tienganh.vocabulary.view.activities.main.MainActivity">
@@ -26,7 +26,10 @@
             android:name="com.tienganh.vocabulary.service.BackgroundService"
             android:enabled="true"
             android:exported="false"
-            android:process=":worker"/>
+            android:process=":worker" />
+
+        <activity android:name="com.tienganh.vocabulary.service.DialogActivity"
+            android:theme="@style/DialogTheme"/>
     </application>
 
 </manifest>
